# YASBA

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
.zed/: settings.json
adrs/: 0001-offline-first.md  0002-deterministic-domain-model.md  0003-indexeddb-schema-and-record-storage.md  0004-record-ids-and-ordering-strategy.md  0005-append-only-transaction-corrections.md  0006-category-lifecycle-hierarchy-ordering.md
backend/: pyproject.toml
docs/architecture/: domain-engine.md
docs/branding/: branding.css  components.css  layout.css  normalize.css  styleguide.html
docs/dev-setup/: windows.md  zed.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/app/: commands.ts  exportImport.ts  moneyFormat.ts  month.ts
frontend/src/app/__tests__/: exportImport.test.ts  importParsing.test.ts
frontend/src/domain/: money.ts  month.ts  types.ts
frontend/src/domain/__tests__/: projectMonth.test.ts
frontend/src/domain/projectors/: projectMonth.ts  projectSpendingByCategory.ts  types.ts
frontend/src/domain/projectors/__tests__/: projectSpendingByCategory.test.ts
frontend/src/domain/views/: categoriesView.ts  index.ts  monthTransactions.ts
frontend/src/domain/views/__tests__/: categoriesView.test.ts  (+1 more)
frontend/src/storage/: db.ts  index.ts  recordsRepo.ts
infra/: README.md  compose.yml
infra/frontend/: Dockerfile.dev
scripts/: generate_icons.py  tree3.py
scripts/windows/: bootstrap.ps1
